theme_arup - #48440 - Label formatting, fixed image, fix text overlapping.

--- a/theme/arup/less/elements/courseformat.less
+++ b/theme/arup/less/elements/courseformat.less
@@ -285,7 +285,7 @@
     .section .activity.modtype_label.label {
         padding-left: 24px;
         .mod-indent-outer {
-            display: table;
+            display: block;
         }
     }
     .single-section {
